Use shade plugin to shade jetty and jakarta servlet API